--- a/desing_pattern/singleton/pubspec.yaml
+++ b/desing_pattern/singleton/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite: ^1.3.1+1
+  path: ^1.7.0
 
 
   # The following adds the Cupertino Icons font to your application.
